Added order logic to expose create order from OrderController.